--- a/ui/src/locales/en/messages.po
+++ b/ui/src/locales/en/messages.po
@@ -13,25 +13,58 @@ msgstr ""
 "Language-Team: \n"
 "Plural-Forms: \n"
 
-#: src/App.tsx:15
-#~ msgid "Canadian Flag"
-#~ msgstr "Canadian Flag"
+#. js-lingui-explicit-id
+#: src/Navigation.tsx:37
+msgid "/"
+msgstr "/"
+
+#. js-lingui-explicit-id
+#: src/Navigation.tsx:46
+msgid "/drug-seizures"
+msgstr "/drug-seizures"
+
+#: src/index.tsx:57
+msgid "About"
+msgstr "About"
+
+#: src/index.tsx:29
+#: src/index.tsx:32
+#: src/Navigation.tsx:52
+msgid "Drug Seizures"
+msgstr "Drug Seizures"
+
+#: src/index.tsx:78
+msgid "drug-seizures"
+msgstr "drug-seizures"
 
 #: src/TitleBar.tsx:21
 msgid "Federal Policing"
 msgstr "Federal Policing"
 
-#: src/App.tsx:26
-#~ msgid "Government of<0/> Canada"
-#~ msgstr "Government of<0/> Canada"
+#: src/index.tsx:60
+msgid "Federal Policing is a core responsibility of the RCMP that is carried out in every province and territory in Canada, as well as internationally."
+msgstr "Federal Policing is a core responsibility of the RCMP that is carried out in every province and territory in Canada, as well as internationally."
+
+#: src/index.tsx:45
+msgid "Federal Policing protects Canada, its people, and its interests against the greatest domestic and international criminal threats, including risks to national security, transnational and serious organized crime, and cybercrime."
+msgstr "Federal Policing protects Canada, its people, and its interests against the greatest domestic and international criminal threats, including risks to national security, transnational and serious organized crime, and cybercrime."
+
+#: src/index.tsx:42
+#: src/Navigation.tsx:43
+msgid "Home"
+msgstr "Home"
+
+#: src/index.tsx:16
+msgid "Login"
+msgstr "Login"
+
+#: src/index.tsx:19
+msgid "Please log in."
+msgstr "Please log in."
 
 #: src/Header.tsx:38
 msgid "Royal Canadian<0/>Mounted Police"
 msgstr "Royal Canadian<0/>Mounted Police"
-
-#: src/App.tsx:29
-msgid "Start building amazing things with Rsbuild."
-msgstr "Start building amazing things with Rsbuild."
 
 #: src/Footer.tsx:26
 msgid "Symbol of the Government of Canada"
