--- a/ui/src/locales/fr/messages.po
+++ b/ui/src/locales/fr/messages.po
@@ -13,25 +13,58 @@ msgstr ""
 "Language-Team: \n"
 "Plural-Forms: \n"
 
-#: src/App.tsx:15
-#~ msgid "Canadian Flag"
-#~ msgstr "Drapeau canadien"
+#. js-lingui-explicit-id
+#: src/Navigation.tsx:37
+msgid "/"
+msgstr "/"
+
+#. js-lingui-explicit-id
+#: src/Navigation.tsx:46
+msgid "drug-seizures"
+msgstr "saisies-de-drogues"
+
+#: src/index.tsx:57
+msgid "About"
+msgstr "A propos"
+
+#: src/index.tsx:29
+#: src/index.tsx:32
+#: src/Navigation.tsx:52
+msgid "Drug Seizures"
+msgstr "Saisies de drogues"
+
+#: src/index.tsx:78
+msgid "drug-seizures"
+msgstr "saisies-de-drogues"
 
 #: src/TitleBar.tsx:21
 msgid "Federal Policing"
 msgstr "Police fédérale"
 
-#: src/App.tsx:26
-#~ msgid "Government of<0/> Canada"
-#~ msgstr "Gouvernement du<0/> Canada"
+#: src/index.tsx:60
+msgid "Federal Policing is a core responsibility of the RCMP that is carried out in every province and territory in Canada, as well as internationally."
+msgstr "Les services de la Police fédérale constituent une responsabilité essentielle de la GRC et sont fournis dans chaque province et territoire au pays ainsi qu'à l'étranger."
+
+#: src/index.tsx:45
+msgid "Federal Policing protects Canada, its people, and its interests against the greatest domestic and international criminal threats, including risks to national security, transnational and serious organized crime, and cybercrime."
+msgstr "La Police fédérale protège le Canada, sa population et ses intérêts contre les plus grandes menaces criminelles au pays et à l'étranger, y compris les risques pour la sécurité nationale, le crime organisé et transnational et la cybercriminalité."
+
+#: src/index.tsx:42
+#: src/Navigation.tsx:43
+msgid "Home"
+msgstr "Accueil"
+
+#: src/index.tsx:16
+msgid "Login"
+msgstr "Se connecter"
+
+#: src/index.tsx:19
+msgid "Please log in."
+msgstr "Veuillez vous connecter."
 
 #: src/Header.tsx:38
 msgid "Royal Canadian<0/>Mounted Police"
 msgstr "Gendarmerie royale<0/>du Canada"
-
-#: src/App.tsx:29
-msgid "Start building amazing things with Rsbuild."
-msgstr "Commencez à construire des choses incroyables avec Rsbuild."
 
 #: src/Footer.tsx:26
 msgid "Symbol of the Government of Canada"
